--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//templates/Financeiro/carteiraList.html.twig=UTF-8
 encoding//templates/financeiro/carteiraList.html.twig=UTF-8
 encoding//templates/main.html.twig=UTF-8
 encoding//templates/util/confirmationModal.html.twig=UTF-8
