--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//templates/Financeiro/carteiraList.html.twig=UTF-8
+encoding//templates/Financeiro/movimentacaoList.html.twig=UTF-8
 encoding//templates/Util/confirmationModal.html.twig=UTF-8
 encoding//templates/main.html.twig=UTF-8
 encoding/<project>=UTF-8
