--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -22,6 +22,8 @@ security:
                 path:     /
             
             anonymous: ~
+            
+            # access_denied_handler: App\Security\AccessDeniedHandler
 
             # activate different ways to authenticate
 
