Entidades e Repositories para Estoque, Producao, Cortinas...

--- a/.project
+++ b/.project
@@ -30,5 +30,6 @@
 		<nature>org.eclipse.php.core.PHPNature</nature>
 		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 		<nature>com.dubture.doctrine.core.doctrineNature</nature>
+		<nature>org.eclipse.wst.jsdt.core.jsNature</nature>
 	</natures>
 </projectDescription>
