--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.19.0",
+        "@coreui/coreui": "^2.0.4",
+        "@symfony/webpack-encore": "^0.20.1",
+        "bootstrap": "4",
+        "copy-webpack-plugin": "^4.5.2",
+        "datatables": "^1.10.18",
+        "flag-icon": "^2.5.0",
+        "flag-icon-css": "^3.0.0",
+        "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
+        "jquery-mask-plugin": "^1.14.15",
+        "jquery-maskmoney": "^3.0.2",
+        "node-sass": "^4.9.3",
+        "pace": "^0.0.4",
+        "pace-progress": "HubSpot/pace",
+        "perfect-scrollbar": "1",
+        "popper.js": "^1.14.4",
+        "sass-loader": "^7.1.0",
+        "select2": "3",
+        "simple-line-icons": "^2.4.1",
         "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
