--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
     "devDependencies": {
         "@coreui/coreui": "^2.0.4",
+        "@fortawesome/fontawesome-free": "^5.2.0",
         "@symfony/webpack-encore": "^0.20.1",
         "bootstrap": "4",
         "copy-webpack-plugin": "^4.5.2",
         "datatables": "^1.10.18",
         "flag-icon": "^2.5.0",
         "flag-icon-css": "^3.0.0",
-        "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
         "jquery-mask-plugin": "^1.14.15",
         "jquery-maskmoney": "^3.0.2",
