--- a/.env-local
+++ b/.env-local
@@ -1,19 +1,14 @@
-# This file is a "template" of which env vars needs to be defined in your configuration or in an .env file
-# Set variables here that may be different on each deployment target of the app, e.g. development, staging, production.
+# This file is a "template" of which env vars need to be defined for your application
+# Copy this file to .env file for development, create environment variables when deploying to production
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_DEBUG=1
 APP_SECRET=
+#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
+#TRUSTED_HOSTS=localhost,example.com
 ###< symfony/framework-bundle ###
-
-###> doctrine/doctrine-bundle ###
-# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# For a sqlite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
-# Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
-DATABASE_URL=mysql://bonerp:bonerp_dev@127.0.0.1:3306/bonerp
-###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
 # For Gmail as a transport, use: "gmail://username:password@localhost"
@@ -21,3 +16,22 @@ DATABASE_URL=mysql://bonerp:bonerp_dev@127.0.0.1:3306/bonerp
 # Delivery is disabled by default via "null://localhost"
 MAILER_URL=null://localhost
 ###< symfony/swiftmailer-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# Configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/bonerp
+###< doctrine/doctrine-bundle ###
+
+
+
+PASTAARQUIVOSEKTFISCAL=\\10.1.1.100\spartacus
+
+PASTAARQUIVOSXMLEXEMPLO=D:\nfe
+
+BONSUCESSO_FISCAL_AMBIENTE=HOM
+BONSUCESSO_FISCAL_NFCE_SERIE=4
+BONSUCESSO_FISCAL_NFE_SERIE=4
+
+
+FISCAL_UNIMAKE_PASTAROOT=\\10.1.1.100\optbonlnxnfe
