--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,7 +26,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
-    App\EventListener\EntityIdListener:
+    App\Doctrine\EventListener\EntityIdListener:
         tags:
-          - { name: doctrine.event_listener, event: prePersist }
-          - { name: doctrine.event_listener, event: preUpdate }
+        - { name: doctrine.event_listener, event: preUpdate }
+        - { name: doctrine.event_listener, event: prePersist }
