--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     },
     "dependencies": {
         "moment": "^2.22.2",
-        "numeral": "^2.0.6"
+        "numeral": "^2.0.6",
+        "sortablejs": "RubaXa/Sortable"
     }
 }
