--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
         "@coreui/coreui": "^2.0.4",
         "@fortawesome/fontawesome-free": "^5.2.0",
         "@symfony/webpack-encore": "^0.20.1",
-        "bootstrap": "4",
+        "bootstrap": ">=4.1.2",
         "copy-webpack-plugin": "^4.5.2",
         "datatables": "^1.10.18",
         "flag-icon": "^2.5.0",
@@ -33,6 +33,7 @@
     "dependencies": {
         "moment": "^2.22.2",
         "numeral": "^2.0.6",
+        "select2-bootstrap-theme": "^0.1.0-beta.10",
         "sortablejs": "RubaXa/Sortable"
     }
 }
