--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
     "license": "proprietary",
     "require": {
         "php": "^7.1.3",
+        "ext-bcmath": "*",
         "ext-iconv": "*",
         "ext-soap": "*",
-        "ext-bcmath": "*",
         "ext-zip": "*",
         "econea/nusoap": "~0.9.5.1",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
@@ -27,7 +27,8 @@
         "symfony/validator": "^4.0",
         "symfony/web-link": "^4.0",
         "symfony/webpack-encore-pack": "^1.0",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
         "sensiolabs/security-checker": "^4.1",
