Trocando erro 500 por msg no growl para EmissaoNFePV

--- a/package.json
+++ b/package.json
@@ -11,21 +11,21 @@
         "jquery": "^3.3.1",
         "jquery-mask-plugin": "^1.14.15",
         "jquery-maskmoney": "^3.0.2",
+        "moment": "^2.22.2",
         "node-sass": "^4.9.3",
+        "numeral": "^2.0.6",
         "pace": "^0.0.4",
         "pace-progress": "HubSpot/pace",
         "perfect-scrollbar": "1",
         "popper.js": "^1.14.4",
         "sass-loader": "^7.1.0",
         "select2": "4",
-        "simple-line-icons": "^2.4.1",
-        "toastr": "^2.1.4",
-        "webpack-notifier": "^1.6.0",
-        "moment": "^2.22.2",
-        "numeral": "^2.0.6",
         "select2-bootstrap-theme": "^0.1.0-beta.10",
+        "simple-line-icons": "^2.4.1",
         "sortablejs": "RubaXa/Sortable",
-        "summernote": "^0.8.10"
+        "summernote": "^0.8.10",
+        "toastr": "^2.1.4",
+        "webpack-notifier": "^1.6.0"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -35,7 +35,5 @@
         "watch": "encore dev --watch",
         "build": "encore production"
     },
-    "dependencies": {
-        
-    }
+    "dependencies": {}
 }
