--- a/composer.json
+++ b/composer.json
@@ -4,11 +4,12 @@
     "require": {
         "php": "^7.1.3",
         "ext-bcmath": "*",
+        "ext-curl": "^7.2",
+        "ext-ftp": "*",
         "ext-iconv": "*",
+        "ext-intl": "*",
         "ext-soap": "*",
         "ext-zip": "*",
-        "ext-intl": "*",
-        "ext-ftp": "*",
         "econea/nusoap": "~0.9.5.1",
         "friendsofsymfony/jsrouting-bundle": "^2.2",
         "sensio/framework-extra-bundle": "^5.1",
